fixed background image

--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,8 @@ body {
     background-size: cover;
     background-position: center;
 }
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
